--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -6,12 +6,7 @@ Syntax recommendation http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html
 */
 
 @import "bootstrap";
-@import "1140";
-@import "1140_styles";
-
-.container{
-	padding: 0px 20px;
-}
+@import "bootstrap-responsive";
 
 header[role=banner] {
 	padding: 40px 0px;
@@ -26,8 +21,65 @@ header[role=banner] {
 	}
 }
 
-.container.body{
+.wrapper{
 	background-color: #ededed;
 	padding: 20px;
 }
 
+.form-signin { 
+	max-width: 300px;
+	padding: 19px 29px 29px;
+	margin: 0 auto 20px;
+	background-color: #fff;
+	border: 1px solid #e5e5e5;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+	box-shadow: 0 1px 2px rgba(0,0,0,.05);
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+	margin-bottom: 10px;
+}
+.form-signin input[type="text"],
+.form-signin input[type="password"] {
+	font-size: 16px;
+	height: auto;
+	margin-bottom: 15px;
+	padding: 7px 9px;
+}
+
+#infoscreens{
+	width: 100%;
+	
+	.infoscreen{
+		margin: 10px;
+		padding-bottom: 10px;
+		width: 214px;
+		float: left;
+		text-align: center;
+		
+		.screen{
+			-moz-box-shadow: 0px 0px 5px #aaa;
+			-webkit-box-shadow: 0px 0px 5px #aaa;
+			box-shadow: 0px 0px 5px #aaa;
+			height: 130px;
+			border: 5px solid #000;
+			margin-bottom: 5px;
+			
+			.inside{
+				width: 100%;
+				height: 100%;
+				background-color: #fff;
+				text-align: center;
+			}
+		}
+	}
+	
+}
+
+.nomargin{
+	margin:0;
+}
