--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -91,6 +91,7 @@ nav[role=navigation] {
 			box-shadow: 0px 0px 5px #aaa;
 			height: 130px;
 			border: 5px solid #000;
+			background-color: #fff;
 			margin-bottom: 5px;
 			
 			.inside{
@@ -104,6 +105,52 @@ nav[role=navigation] {
 	
 }
 
+.single-infoscreen{
+	position: relative;
+	margin: 0px auto;
+	width: 100%;
+	max-width: 500px;
+	margin-bottom: 25px;
+	
+	.dummy{
+		padding-top:55%;
+	}
+	
+	.screen{
+		position: absolute;
+		top: 0;
+		bottom: 0px;
+		left: 0;
+		right: 0;
+		padding-top: 40px;
+		
+		.btn-group{
+			top: 0;
+			right: 0;
+			position: absolute;
+			
+			.btn{
+				padding-top: 6px;
+				
+				[class*=" icon-"]{
+					line-height: inherit;
+				}
+			}
+		}
+		
+		.inner{
+			background-color: #fff;
+			border: 5px solid #000;
+			height: 100%;
+			min-height: 100px;
+		}
+	}
+}
+
+.form-horizontal.center{
+	margin: 0px auto;
+	max-width: 500px;
+}
 
 footer[role=footer] {
 	width:100%;
