--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -143,6 +143,33 @@ nav[role=navigation] {
 			border: 5px solid #000;
 			height: 100%;
 			min-height: 100px;
+			position: relative;
+			
+			.left-side{
+				width: 50%;
+				height: 100%;
+				position: absolute;
+			}
+			
+			.right-side{
+				width: 50%;
+				height: 100%;
+				left: 50%;
+				position: absolute;
+			}
+			
+			.logo{
+				width: 100%;
+				height: 100%;
+				max-width: 600px;
+				max-height: 69px;
+				bottom: 25px;
+				right: 25px;
+				background-size: contain;
+				background-repeat: no-repeat;
+				background-position: right bottom;
+				position: absolute;
+			}
 		}
 	}
 }
