added webfont as standard font

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -11,6 +11,7 @@ Syntax recommendation http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html
 
 
 html, body{
+        font-family: "Soho Gothic W01 Regular", sans-serif;
 	height: 100%;
 	background-color: #2257a6;
 	padding: 0px;
