--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -211,6 +211,34 @@ nav[role=navigation] {
 .turtle-holder{
 	position: relative;
 
+	#pane-selector{
+		position: absolute;
+		margin-top: -30px;
+		right: -5px;
+
+		ul{
+			display:inline;
+			margin: 0px;
+			padding: 0px;
+		}
+
+		li{
+			cursor: pointer;
+			display: inline;
+			width: 10px;
+			text-align: right;
+			font-size: 30px;
+			vertical-align: middle;
+			padding: 0px;
+			margin: 0px;
+			color: #ccc;
+		}
+
+		li.active{
+			color: #666;
+		}
+	}
+
 	.turtle-area{
 		width: 100%;
 		border: 5px solid #000;
