Add Velo turtle

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -283,7 +283,7 @@ nav[role=navigation] {
 						background-image: url('../img/turtle_nmbs.png');
 					}
 
-					&.villo{
+					&.villo, &.velo{
 						background-image: url('../img/turtle_villo.png');
 					}
 				}
