--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -15,6 +15,12 @@ html, body{
 	padding: 0px;
 }
 
+input,
+select,
+textarea{
+	font-family: inherit;
+}
+
 header[role=banner] {
 	padding: 40px 0px;
 	margin: 0 auto;
@@ -332,6 +338,24 @@ nav[role=navigation] {
 		min-height: 350px;
 		background-color: #fff;
 		position: relative;
+	}
+}
+
+.pane-chooser{
+	.pane{
+		padding: 3px 10px;
+		background-color: #fff;
+		color: #000;
+		border: 1px solid #ddd;
+		margin-bottom: 3px;
+		cursor: pointer;
+		line-height: 25px;
+
+		input[type=checkbox]{
+			margin:0px;
+			margin-top: -2px;
+			margin-right: 10px;
+		}
 	}
 }
 
