--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -44,6 +44,10 @@ nav[role=navigation] {
 	}
 }
 
+.language_switcher a{
+	font-size: 10px !important;
+	padding: 2px 6px !important;
+}
 
 .wrapper{
 	background-color: #fff;
