--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -106,7 +106,7 @@ nav[role=navigation] {
 			.inside{
 				width: 100%;
 				height: 100%;
-				background-color: #fff;
+				background-color: #ccc;
 				text-align: center;
 				position: relative;
 
@@ -184,7 +184,7 @@ nav[role=navigation] {
 		}
 
 		.inner{
-			background-color: #fff;
+			background-color: #ccc;
 			border: 5px solid #000;
 			height: 100%;
 			min-height: 100px;
@@ -204,14 +204,13 @@ nav[role=navigation] {
 			}
 
 			.logo-holder{
-				width: 100%;
 				height: 100%;
-				max-width: 240px;
 				max-height: 39px;
 				position: absolute;
 				background-color: #fff;
 				bottom: 0px;
 				right: 0px;
+				left: 0px;
 				padding: 5px;
 
 				.logo{
@@ -288,7 +287,7 @@ nav[role=navigation] {
 		border: 5px solid #000;
 		border-right: none;
 		min-height: 350px;
-		background-color: #fff;
+		background-color: #ccc;
 		position: relative;
 
 		.turtle_instance{
@@ -409,7 +408,7 @@ nav[role=navigation] {
 		border: 5px solid #000;
 		border-left: none;
 		min-height: 350px;
-		background-color: #fff;
+		background-color: #ccc;
 		position: relative;
 
 		.pane-options{
