--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -607,3 +607,21 @@ select{
 .backlink{
     margin-top: 15px;
 }
+
+.turtle_signage{
+    hr{
+        border: 0;
+        border-bottom: 1px solid #ddd;
+        margin-bottom: 0px;
+    }
+
+    .listing{
+        margin-top: 3px;
+        padding-left: 10px;
+
+        & > i{
+            margin-right: 10px;
+            color: #aaa;
+        }
+    }
+}
