--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -87,10 +87,6 @@ nav[role=navigation] h4{
     .row.submenu{
         padding: 0px;
 
-        h3{
-            display: inline-block;
-        }
-
         .backlink, .btn{
             margin-top: 15px;
         }
@@ -150,6 +146,7 @@ nav[role=navigation] h4{
             height: 115px;
             border: 5px solid #000;
             background-color: #fff;
+            overflow: hidden;
             // margin-bottom: 5px;
 
             .inside{
