--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -27,6 +27,14 @@ select{
     -webkit-appearance: menulist;
 }
 
+strong, b{
+    font-family: "Soho Gothic W01 Medium";
+}
+
+.alert strong{
+    margin-right: 10px;
+}
+
 header[role=banner] {
     padding: 20px 0px;
     margin: 0 auto;
@@ -53,26 +61,12 @@ nav[role=navigation] {
     i{
         color: #0578bd;
     }
-}
 
-nav[role=navigation] h4{
-    display:inline;
-    padding:0px;
-    padding-right: 10px;
-    font-size: 12px;
-}
-
-.dropdown-menu{
-    .active a{
-        color:#fff;
-        background-image: none !important;
-        background-color: #0088cc !important;
-    }
-
-    .active a:hover, a:hover, a:focus{
-        color:#fff;
-        background-image: none !important;
-        background-color: lighten(#0088cc, 4%) !important;
+    h4{
+        display:inline;
+        padding:0px;
+        padding-right: 10px;
+        font-size: 12px;
     }
 }
 
@@ -90,6 +84,37 @@ nav[role=navigation] h4{
         background: none;
         border: none;
         box-shadow: none;
+    }
+
+    .dropdown-menu{
+        max-height:360px;
+        overflow-y: auto;
+        border-radius: 0px;
+        background-color:#f8f8f8;
+        border: 1px solid #d4d4d4;
+        margin-top: -1px;
+
+        a{
+            padding: 5px 15px !important;
+            color: #555;
+            text-shadow: 0 1px 0 #fff;
+        }
+
+        .active a{
+            background-image: none !important;
+            background-color: #e5e5e5 !important;
+            text-shadow: none;
+            -webkit-box-shadow: inset 0 3px 8px rgba(0,0,0,0.125);
+            -moz-box-shadow: inset 0 3px 8px rgba(0,0,0,0.125);
+            box-shadow: inset 0 3px 8px rgba(0,0,0,0.125);
+        }
+
+        .active a:hover, a:hover, a:focus{
+            color:#fff;
+            background-image: none !important;
+            background-color: #0088cc !important;
+            text-shadow: none;
+        }
     }
 }
 
@@ -149,6 +174,7 @@ nav[role=navigation] h4{
 
     .more{
         display: table-cell;
+        float:left;
         vertical-align: middle;
         width: 214px;
         text-align: center;
@@ -163,12 +189,24 @@ nav[role=navigation] h4{
             -webkit-border-radius: 15px;
             -moz-border-radius: 15px;
             border-radius: 15px;
+            margin-top: 50px;
+        }
+    }
+
+    a:hover{
+        .infoscreen{
+            margin: 8px;
+            width: 218px;
+
+            .screen{
+                height: 119px;
+            }
         }
     }
 
     .infoscreen{
         margin: 10px;
-        padding-bottom: 10px;
+        padding-bottom: 5px;
         width: 214px;
         float: left;
         text-align: center;
@@ -192,7 +230,7 @@ nav[role=navigation] h4{
             border: 5px solid #000;
             background-color: #fff;
             overflow: hidden;
-            // margin-bottom: 5px;
+            margin-bottom: 5px;
 
             .inside{
                 width: 100%;
@@ -221,10 +259,15 @@ nav[role=navigation] h4{
 
                     .logo{
                         width: 100%;
+                        max-width: 70px;
                         height: 100%;
+                        max-height: 20px;
                         background-size: contain;
                         background-repeat: no-repeat;
-                        background-position: right bottom;
+                        background-position: right center;
+                        position:absolute;
+                        top: 5px;
+                        right: 7px;
                     }
                 }
             }
@@ -814,6 +857,12 @@ select{
 }
 
 @media (max-width: 550px){
+    .navbar{
+        .navbar-search{
+            display: none;
+        }
+    }
+
     .single-infoscreen{
         .screen-links{
             left: 0px;
