--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -140,9 +140,14 @@ nav[role=navigation] {
     }
 }
 
-.language_switcher a{
-    font-size: 10px !important;
-    padding: 2px 6px !important;
+.language_switcher{
+    margin-left: 10px;
+    display: inline-block;
+
+    a{
+        font-size: 10px !important;
+        padding: 2px 6px !important;
+    }
 }
 
 .wrapper{
