--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -40,7 +40,18 @@ header[role=banner] {
     padding: 20px 0px;
     margin: 0 auto;
     overflow: hidden;
-    background-color: #fff;
+
+    &.error:after{
+        content:'';
+        width: 100%;
+        height: 200px;
+        position:absolute;
+        left:0px;
+        top: 108px;
+        background: url('../img/error/clouds.png');
+        background-repeat: repeat-x;
+        background-position: 0px 0px;
+    }
 
     hgroup {
         width: 67%;
@@ -152,6 +163,18 @@ nav[role=navigation] {
 
 .wrapper{
     background-color: #fff;
+}
+
+.error_wrapper{
+    background-color: #16b0d8;
+    padding-bottom: 20px;
+    padding-top: 100px;
+    background-image: url('../img/error/building.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    border-bottom: 6px solid #0b79be;
+
+    color: #fff;
 }
 
 .grey_wrapper{
@@ -797,6 +820,10 @@ footer[role=footer] {
     padding: 20px 0px;
     color: #fff;
 
+    &.error{
+        border: 0px none;
+    }
+
     a{
         color: #21b0d7;
     }
@@ -964,6 +991,10 @@ select{
         padding: 0px;
         padding-bottom: 10px;
         overflow: hidden;
+
+        &.error:after{
+            top: 58px;
+        }
 
         hgroup {
             max-height: 30px;
