--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -663,6 +663,10 @@ nav[role=navigation] {
                         background-image: url('../img/turtle_image.png');
                     }
 
+                    &.calendar{
+                        background-image: url('../img/turtle_calendar.png');
+                    }
+
                 }
             }
 
