added priclelist to panes and worked on part of the image upload

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -951,6 +951,9 @@ select{
             margin-left: 5px;
         }
 
+        input[type=file]{
+            height: 10px;
+        }
         input[type=text]{
             width: 150px;
         }
