--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -983,6 +983,88 @@ select{
     }
 }
 
+.turtle_weekmenu{
+    hr{
+        border: 0;
+        border-bottom: 1px solid #ddd;
+        margin-bottom: 0px;
+    }
+
+    input[type=number]{
+        width: 50px;
+    }
+
+    .btn{
+        margin-left: 10px;
+
+        &.delete-item{
+            margin-left: 5px;
+        }
+    }
+
+    .listing{
+        margin-top: 3px;
+
+        & > i{
+            margin-right: 10px;
+            color: #aaa;
+            float:left;
+        }
+
+        input[type=file]{
+            height: 10px;
+        }
+        input[type=text]{
+            width: 250px;
+        }
+
+        .entry_image_holder{
+            display: inline-block;
+        }
+
+        form{
+            margin: 0px;
+            padding: 0px;
+        }
+    }
+
+    .offer{
+        textarea{
+            margin-top: 10px;
+            height: 40px;
+            min-height: 0 !important;
+            width: 90% !important;
+            margin-bottom: 10px !important;
+        }
+
+
+        input[type=file]{
+            height: 10px;
+        }
+        input[type=text]{
+            width: 250px;
+        }
+
+        .small-file-upload{
+            margin-left: 0 !important;
+
+            form{
+                margin: 0;
+            }
+        }
+    }
+
+    img{
+        max-width: 120px;
+        margin-left: 10px;
+        max-height: 20px;
+    }
+
+    .small-file-upload{
+        margin-left: 30px !important;
+    }
+}
+
 .turtle_signage{
     hr{
         border: 0;
