--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -932,10 +932,16 @@ select{
         width: 250px;
     }
 
+    .listings{
+        margin-top: 30px;
+    }
+
     .listing{
-        margin-top: 3px;
-        margin-bottom: 10px;
-        padding-left: 160px;
+        margin-left: 50px;
+
+        .control-group{
+            margin-bottom: 0px !important;
+        }
 
         & > i{
             margin-right: 10px;
@@ -943,12 +949,11 @@ select{
         }
 
         textarea{
-            margin-top: 10px;
-            margin-left: 20px;
             height: 40px;
+            margin-left: 5px;
             min-height: 0 !important;
             width: 90% !important;
-            margin-bottom: 10px !important;
+            margin-bottom:10px !important;
         }
 
         input{
