--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1042,12 +1042,11 @@ select{
         -moz-border-radius: 3px;
         -webkit-border-radius: 3px;
         border-radius: 3px;
-        left:10%;
-        top:10%;
+        left:30%;
+        top:30%;
         position: fixed;
         display: none;
-        width: 80%;
-        min-height: 300px;
+        width: 40%;
         z-index:100;
 
         .header{
@@ -1066,12 +1065,19 @@ select{
             float:left;
             width:48%;
             padding:1%;
+            display:none;
         }
 
         .footer{
             float:right;
             margin:1%;
         }
+    }
+
+    #upload-modal.wide{
+        width:80%;
+        left:10%;
+        top:10%;
     }
 }
 
